完成创建队伍以及添加成员的功能
